Update between and latest query interfaces
Add default methods
Add javadoc
RAD-1330